versioned_docs/version-2.3/reference/targets/pex_binary.mdx
---
title: pex_binary
# The old-style `code...code` anchors are heading level 6, and shouldn't be visible in ToC
toc_max_heading_level: 5
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

A Python target that can be converted into an executable PEX file.

PEX files are self-contained executable files that contain a complete Python environment capable of running the target. For more information, see https://www.pantsbuild.org/v2.3/docs/pex-files.

Backend: <span className="color--primary">``</span>

---

<span className={styles.options}>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codetagscode}
</div>

## `tags`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Arbitrary strings to describe a target.

For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `./pants --tag='integration_test' test ::` to only run on targets with that tag.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codedescriptioncode}
</div>

## `description`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

A human-readable description of the target.

Use `./pants list --documented ::` to see all targets with descriptions.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeoutput_pathcode}
</div>

## `output_path`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

Where the built asset should be located.

If undefined, this will use the path to the BUILD file, followed by the target name. For example, `src/python/project:app` would be `src.python.project/app.ext.

When running `./pants package`, this path will be prefixed by `--distdir` (e.g. `dist/`).

Warning: setting this value risks naming collisions with other package targets you may have.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeinterpreter_constraintscode}
</div>

## `interpreter_constraints`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

The Python interpreters this code is compatible with.

Each element should be written in pip-style format, e.g. &#x27;CPython==2.7.\*&#x27; or &#x27;CPython&#x3E;=3.6,&#x3C;4&#x27;. You can leave off `CPython` as a shorthand, e.g. &#x27;&#x3E;=2.7&#x27; will be expanded to &#x27;CPython&#x3E;=2.7&#x27;.

Specify more than one element to OR the constraints, e.g. `['PyPy==3.7.*', 'CPython==3.7.*']` means either PyPy 3.7 _or_ CPython 3.7.

If the field is not set, it will default to the option `[python-setup].interpreter_constraints`.

See https://www.pantsbuild.org/v2.3/docs/python-interpreter-compatibility.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codedependenciescode}
</div>

## `dependencies`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Addresses to other targets that this target depends on, e.g. [&#x27;helloworld/subdir:lib&#x27;].

Alternatively, you may include file names. Pants will find which target owns that file, and create a new target from that which only includes the file in its `sources` field. For files relative to the current BUILD file, prefix with `./`; otherwise, put the full path, e.g. [&#x27;./sibling.txt&#x27;, &#x27;resources/demo.json&#x27;].

You may exclude dependencies by prefixing with `!`, e.g. `['!helloworld/subdir:lib', '!./sibling.txt']`. Ignores are intended for false positives with dependency inference; otherwise, simply leave off the dependency from the BUILD file.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeentry_pointcode}
</div>

## `entry_point`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

The entry point for the binary, i.e. what gets run when executing `./my_binary.pex`.

You can specify a full module like &#x27;path.to.module&#x27; and &#x27;path.to.module:func&#x27;, or use a shorthand to specify a file name, using the same syntax as the `sources` field:

1. &#x27;app.py&#x27;, Pants will convert into the module `path.to.app`;
2. &#x27;app.py:func&#x27;, Pants will convert into `path.to.app:func`.

You must use the file name shorthand for file arguments to work with this target.

To leave off an entry point, set to &#x27;&#x3C;none&#x3E;&#x27;.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeplatformscode}
</div>

## `platforms`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

The platforms the built PEX should be compatible with.

This defaults to the current platform, but can be overridden to different platforms. You can give a list of multiple platforms to create a multiplatform PEX.

To use wheels for specific interpreter/platform tags, you can append them to the platform with hyphens like: PLATFORM-IMPL-PYVER-ABI (e.g. &#x22;linux_x86_64-cp-27-cp27mu&#x22;, &#x22;macosx_10.12_x86_64-cp-36-cp36m&#x22;):

- PLATFORM: the host platform, e.g. &#x22;linux-x86_64&#x22;, &#x22;macosx-10.12-x86_64&#x22;.
- IMPL: the Python implementation abbreviation, e.g. &#x22;cp&#x22;, &#x22;pp&#x22;, &#x22;jp&#x22;.
- PYVER: a two-digit string representing the Python version, e.g. &#x22;27&#x22;, &#x22;36&#x22;.
- ABI: the ABI tag, e.g. &#x22;cp36m&#x22;, &#x22;cp27mu&#x22;, &#x22;abi3&#x22;, &#x22;none&#x22;.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeinherit_pathcode}
</div>

## `inherit_path`

<Field
    type_repr={`'fallback' | 'false' | 'prefer' | None`}
    default_repr={`None`}
>

Whether to inherit the `sys.path` (aka PYTHONPATH) of the environment that the binary runs in.

Use `false` to not inherit `sys.path`; use `fallback` to inherit `sys.path` after packaged dependencies; and use `prefer` to inherit `sys.path` before packaged dependencies.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codezip_safecode}
</div>

## `zip_safe`

<Field
    type_repr={`bool | None`}
    default_repr={`True`}
>

Whether or not this binary is safe to run in compacted (zip-file) form.

If the PEX is not zip safe, it will be written to disk prior to execution. You may need to mark `zip_safe=False` if you&#x27;re having issues loading your code.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codealways_write_cachecode}
</div>

## `always_write_cache`

<Field
    type_repr={`bool | None`}
    default_repr={`False`}
>

Whether PEX should always write the .deps cache of the .pex file to disk or not. This can use less memory in RAM-constrained environments.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeignore_errorscode}
</div>

## `ignore_errors`

<Field
    type_repr={`bool | None`}
    default_repr={`False`}
>

Should PEX ignore when it cannot resolve dependencies?

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeshebangcode}
</div>

## `shebang`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

Set the generated PEX to use this shebang, rather than the default of PEX choosing a shebang based on the interpreter constraints.

This influences the behavior of running `./result.pex`. You can ignore the shebang by instead running `/path/to/python_interpreter ./result.pex`.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeemit_warningscode}
</div>

## `emit_warnings`

<Field
    type_repr={`bool | None`}
    default_repr={`None`}
>

Whether or not to emit PEX warnings at runtime.

The default is determined by the option `emit_warnings` in the `[pex-binary-defaults]` scope.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeexecution_modecode}
</div>

## `execution_mode`

<Field
    type_repr={`'unzip' | 'venv' | 'zipapp' | None`}
    default_repr={`None`}
>

The mode the generated PEX file will run in.

The traditional PEX file runs in &#x27;zipapp&#x27; mode (See: https://www.python.org/dev/peps/pep-0441/). In general, faster cold start times can be attained using the &#x27;unzip&#x27; mode which also has the benefit of allowing standard use of `__file__` and filesystem APIs to access code and resources in the PEX.

The fastest execution mode in the steady state is &#x27;venv&#x27;, which generates a virtual environment from the PEX file on first run, but then achieves near native virtual environment start times. This mode also benefits from a traditional virtual environment `sys.path`, giving maximum compatibility with stdlib and third party APIs.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeinclude_toolscode}
</div>

## `include_tools`

<Field
    type_repr={`bool | None`}
    default_repr={`False`}
>

Whether to include Pex tools in the PEX bootstrap code.

With tools included, the generated PEX file can be executed with `PEX_TOOLS=1 <pex file> --help` to gain access to all the available tools.

</Field>

</span>
